<resources>
    <string name="app_name">Acerca de mi</string>
    <string name="name">Jordan BoSs</string>
    <string name="yellow_star">Yellow Star</string>
    <string name="yonaguni">Yeah-yeah-yeah-yeah\n Yeah-yeah-yeah-yeah-yeah-yeah\n Yeah-yeah-yeah-eh-yeah\n Una noche más y copas de más\n Tú no me dejas en paz, de mi mente no te vas\n Aunque sé que no debo, ey\n Pensar en ti, bebé, pero cuando bebo\n Me viene tu nombre, tu cara, tu risa y tu pelo, ey\n Dime dónde tú está\', que yo por ti cojo un vuelo\n Y a Yonaguni le llego\n Aunque sé que no debo, ey\n Pensar en ti, bebé, pero cuando bebo\n Me viene tu nombre, tu cara\n Tu risa y tu pelo, ey\n Dime dónde tú está\', que yo por ti cojo un vuelo\n Y a Yonaguni le llego, ey\n No me busque\' en Instagram\n Mami, búscame en casa\n Pa\' que vea\' lo que pasa, ey\n Si tú me prueba\', te casa\', ey\n Ese cabrón ni te abraza\n Y yo loco por tocarte\n Pero ni me atrevo a textearte\n Tú con cualquier outfit la parte\'\n Mami, tú ere\' aparte\n Shorty, tiene\' un culo bien grande, eh\n De-demasiao\' grande\n Y yo lo tengo estudiao\', ya mismo me gradúo\n Y en la cara me lo tatúo\n Vi que viste mi story y subiste una pa\' mí\n Yo que me iba a dormir, ey\n En la disco habían mil\n Y yo bailando contigo en mi mente\n Aunque sé que no debo\n Pensar en ti, bebé, pero cuando bebo\n Me viene tu nombre, tu cara\n Tu risa y tu pelo, ey\n Dime dónde tú está\', que yo por ti cojo un vuelo\n Y a Yonaguni le llego\n Si me da\' tu dirección, yo te mando mil carta\'\n Si me da\' tu cuenta de banco, un millón de peso\'\n To\'a la noche arrodillao\' a Dio\' le rezo\n Pa\' que ante\' que se acabe el año tú me de\' un beso\n Y empezar el 2023 bien cabrón\n Contigo y un blunt\n Tú te ve\' asesina con ese mahón\n Me matas sin un pistolón\n Y yo te compro un Banshee\n Gucci, Givenchy\n Un poodle, un frenchie\n El pasto, lo\' munchie\'\n Te canto un mariachi\n Me convierto en Itachi, eh\n Yeah-yeah-yeah-yeah\n Bad Bunny, baby, bebé\n Bad Bunny, baby, bebé\n 今日はセックスしたい\n でもあなたとだけ\n どこにいますか?\n どこにいますか?\n 今日はセックスしたい\n でもあなたとだけ\n どこにいますか?\n どこにいますか? Eh</string>
    <string name="what_is_your_nickname">What is your Nickname?</string>
    <string name="done">Done</string>

</resources>