<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/name_text"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAlignment="center"
        style="@style/NameStyle" />

    <ImageView
        android:id="@+id/star_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/yellow_star"
        android:layout_marginTop="16dp"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <EditText
        android:id="@+id/nickname_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        style="@style/NameStyle"
        android:textAlignment="center"
        android:hint="@string/what_is_your_nickname"/>

    <Button
        android:id="@+id/done_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/layout_margin"
        android:fontFamily="@font/roboto"
        android:text="@string/done"
        android:background="@color/colorAccent"/>

    <TextView
        android:id="@+id/nickname_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/NameStyle"
        android:textAlignment="center"
        android:background="@color/colorAccent"
        android:paddingBottom="@dimen/small_padding"
        android:visibility="gone">

    </TextView>

    <ScrollView
        android:id="@+id/bio_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/bio_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yonaguni"
                android:lineSpacingMultiplier="1.2"
                android:paddingEnd="@dimen/layout_padding"
                android:paddingStart="@dimen/layout_padding"
                style="@style/NameStyle"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>